--- a/containers/vertx/pom.xml
+++ b/containers/vertx/pom.xml
@@ -25,13 +25,13 @@
         <module.name>${project.groupId}~${project.artifactId}~${project.version}</module.name>
 
         <!--Dependency versions-->
-        <vertx.version>2.0.1-final</vertx.version>
-        <vertx.testtools.version>2.0.1-final</vertx.testtools.version>
-        <vertx.when.version>1.2.0-final</vertx.when.version>
-        <vertx.mod.hk2.version>1.5.0-final</vertx.mod.hk2.version>
+        <vertx.version>2.1M4-SNAPSHOT</vertx.version>
+        <vertx.testtools.version>2.0.3-final</vertx.testtools.version>
+        <vertx.when.version>1.3.0-SNAPSHOT</vertx.when.version>
+        <vertx.mod.hk2.version>1.6.0-SNAPSHOT</vertx.mod.hk2.version>
 
         <!--Plugin versions-->
-        <maven.vertx.plugin.version>2.0.0-final</maven.vertx.plugin.version>
+        <maven.vertx.plugin.version>2.0.3-SNAPSHOT</maven.vertx.plugin.version>
         <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
 
     </properties>
@@ -80,6 +80,47 @@
 
     <build>
         <plugins>
+            <!-- The vert.x Maven plugin -->
+            <plugin>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-maven-plugin</artifactId>
+                <version>${maven.vertx.plugin.version}</version>
+                <!--
+                You can specify extra config to the plugin as required here
+                <configuration>
+                   <configFile>/path/to/MyVerticle.conf</configFile>
+                   <instances>1</instances>
+                   <classpath>src/main/resources/:src/test/resources/:target/classes/:target/test-classes/</classpath>
+                </configuration>
+                -->
+                <!-- Make sure that the plugin uses the vert.x versions from this pom.xml not from its own pom.xml -->
+                <dependencies>
+                    <dependency>
+                        <groupId>io.vertx</groupId>
+                        <artifactId>vertx-platform</artifactId>
+                        <version>${vertx.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>io.vertx</groupId>
+                        <artifactId>vertx-core</artifactId>
+                        <version>${vertx.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>io.vertx</groupId>
+                        <artifactId>vertx-hazelcast</artifactId>
+                        <version>${vertx.version}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>pullInDeps</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>pullInDeps</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -170,28 +211,6 @@
 
         <pluginManagement>
             <plugins>
-                <!-- The vert.x Maven plugin -->
-                <plugin>
-                    <groupId>io.vertx</groupId>
-                    <artifactId>vertx-maven-plugin</artifactId>
-                    <version>${maven.vertx.plugin.version}</version>
-                    <!--
-                    You can specify a configFile and number of instances to run for the runMod task here if you want
-                    <configuration>
-                       <configFile>/path/to/MyVerticle.conf</configFile>
-                       <instances>1</instances>
-                    </configuration>
-                    -->
-                    <executions>
-                        <execution>
-                            <id>pullInDeps</id>
-                            <phase>prepare-package</phase>
-                            <goals>
-                                <goal>pullInDeps</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
